# BIG-DATA-PROJECT

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: file_sizes.py
logs/: T1_csv_to_duckdb_memory_log.txt  T1_csv_to_duckdb_times.txt  T1_csv_to_hdf5_memory_log.txt  T1_csv_to_hdf5_times.txt  T1_csv_to_parquet_memory_log.txt  T1_csv_to_parquet_times.txt  T2_duckdb_n_workers_1_memory_lim_32.0_times.txt  T2_duckdb_n_workers_1_memory_lim_64.0_memory_log.txt  T2_duckdb_n_workers_2_memory_lim_32.0_memory_log.txt  T2_duckdb_n_workers_2_memory_lim_32.0_times.txt  T2_duckdb_n_workers_3_memory_lim_32.0_times.txt  T2_duckdb_n_workers_3_memory_lim_64.0_memory_log.txt  T2_hdf5_n_workers_1_memory_lim_128.0_memory_log.txt  T2_hdf5_n_workers_1_memory_lim_128.0_times.txt  T2_hdf5_n_workers_2_memory_lim_128.0_memory_log.txt  T2_hdf5_n_workers_2_memory_lim_32.0_times.txt  T2_hdf5_n_workers_3_memory_lim_128.0_memory_log.txt  T2_hdf5_n_workers_3_memory_lim_128.0_times.txt  T2_parquet_n_workers_1_memory_lim_32.0_times.txt  T2_parquet_n_workers_1_memory_lim_64.0_memory_log.txt  T2_parquet_n_workers_2_memory_lim_32.0_memory_log.txt  T2_parquet_n_workers_2_memory_lim_32.0_times.txt  T2_parquet_n_workers_3_memory_lim_32.0_memory_log.txt  T2_parquet_n_workers_3_memory_lim_32.0_times.txt  T3_duckdb_n_workers_1_memory_lim_32.0_memory_log.txt  T3_duckdb_n_workers_1_memory_lim_32.0_plot_times.txt  T3_duckdb_n_workers_2_memory_lim_32.0_memory_log.txt  T3_duckdb_n_workers_2_memory_lim_32.0_plot_times.txt  T3_duckdb_n_workers_3_memory_lim_32.0_memory_log.txt  (+54 more)
tables/: T1_scores.tgn  (+6 more)
(+43 files in other folders)
