[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "bigdata"
version = "0.0.1"
authors = [
  { name="TO DO", email="TODO@gmail.com" },
]
description = "TODO"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.urls]
Homepage = "TODO"
Issues = "TODO"

[tool.setuptools.packages]
find = { "where" = ["src"] }